[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_constants/separation = 20

[node name="CashLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "$200"

[node name="HPLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "HP: 20"

[node name="WaveLabel" type="Label" parent="TopBar"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
text = "Wave: 0/10"

[node name="Spacer" type="Control" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpeedButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(50, 40)
layout_mode = 2
text = "1x"

[node name="PauseButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "PAUSE"

[node name="MenuButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(80, 40)
layout_mode = 2
text = "MENU"

[node name="CannonPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
grow_horizontal = 2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CannonPanel"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="CannonPanel/VBoxContainer"]
layout_mode = 2
text = "Select Cannon"
horizontal_alignment = 1

[node name="CannonGrid" type="GridContainer" parent="CannonPanel/VBoxContainer"]
layout_mode = 2
columns = 5

[node name="InfoPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -200.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="InfoPanel"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Cannon Name"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="InfoPanel/VBoxContainer"]
layout_mode = 2
text = "HP: 100/100
Damage: 15
Range: 150"

[node name="HBoxContainer" type="HBoxContainer" parent="InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="UpgradeButton" type="Button" parent="InfoPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Upgrade $38"

[node name="SellButton" type="Button" parent="InfoPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sell $35"

[node name="GameOverPanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ResultLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "VICTORY!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Score: 0"
horizontal_alignment = 1

[node name="StarsContainer" type="HBoxContainer" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Star1" type="Label" parent="GameOverPanel/VBoxContainer/StarsContainer"]
layout_mode = 2
text = "*"

[node name="Star2" type="Label" parent="GameOverPanel/VBoxContainer/StarsContainer"]
layout_mode = 2
text = "*"

[node name="Star3" type="Label" parent="GameOverPanel/VBoxContainer/StarsContainer"]
layout_mode = 2
text = "*"

[node name="ContinueButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="RetryButton" type="Button" parent="GameOverPanel/VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="PausePanel" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -80.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PausePanel"]
layout_mode = 2

[node name="Label" type="Label" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="PausePanel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="FPSLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 60.0
offset_right = -10.0
offset_bottom = 80.0
grow_horizontal = 0
text = "FPS: 60"
horizontal_alignment = 2
